--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -33,7 +33,7 @@
     <div class="container"></div>
     <h2>LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives</h2>
     <hr>
-    <p class="authors">
+    <!-- <p class="authors">
         <a href="https://jdtsui.github.io/"><b>Jiadi Cui* </b></a>,
         <a><b> Junming Cao* </b></a>,
         <a href="https://zhaofuq.github.io/"><b> Fuqiang Zhao* </b></a>,
@@ -44,19 +44,20 @@
         <a href="https://yujiaoshi.github.io/"> Yujiao Shi </a>,
         <a href="https://cn.linkedin.com/in/yingliangzhang"> Yingliang Zhang† </a>,
         <a href="http://www.yu-jingyi.com/"> Jingyi Yu†</a>
-    </p>
+    </p> -->
     <!-- <h5>* denotes equal contribution</h5> -->
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a>
+        <!-- <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a> -->
+        <a class="btn btn-primary" href="#">Paper</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="#">Code</a>
+        <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-3DGS">Code</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="#">Real-time Viewer</a>
+        <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-SIBR-Viewer">Real-time Viewer</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="#">Web Viewer</a>
+        <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-Web-Viewer">Web Viewer</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="#">GarageWorld</a>
@@ -301,7 +302,7 @@
     </div>
 
 
-    <div class="section">
+    <!-- <div class="section">
         <h2>Citation</h2>
         <hr>
         <div class="bibtexsection">
@@ -313,13 +314,13 @@
         year={2024}
     }
         </div>
-    </div>
+    </div> -->
 
     <hr>
 
-    <footer>
+    <!-- <footer>
         <p>Send feedback and questions to <a href="https://zhaofuq.github.io/">Fuqiang Zhao</a></p>
-    </footer>
+    </footer> -->
 </div>
 
 
