--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
+                src="files/Paper/letsgo.jpg" width="100%" playsinline=""
+                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
+              </div>
+      
+            <div class="col-md-9 col-12 paper-content">
+              <h4>LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives<br>
+              </h4>
+              <p>Jiadi Cui*, Junming Cao*, <strong>Fuqiang Zhao*</strong>, Zhipeng He, Yifan Chen, Yuhui Zhong, Lan Xu, Yujiao Shi, Yingliang Zhang, Jingyi Yu<br>
+              </p>
+              <p>Arxiv Preprint, 2024</p>
+              <p>
+                [<a href="https://zhaofuq.github.io/LetsGo/">ProjectPage</a>]
+                [<a href="https://arxiv.org/pdf/2404.09748">ArxivPage</a>]
+              </p>
+            </div>
+          </div>
+
+          <div class="row paper-box">
+            <div class="col-md-3 col-12 paper_img"> 
+              <img 
                 src="files/Paper/nephele.png" width="100%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
@@ -123,7 +143,6 @@
                 [<a href="https://arxiv.org/pdf/2303.04086.pdf">ArxivPage</a>]
               </p>
             </div>
-       
           </div>
 
 
@@ -202,7 +221,7 @@
               </div>
             <!-- .Icon ends here -->
             <div class="col-md-9 col-12 paper-content">
-              <h4><strong>HumanNeRF</strong>: Efficiently Generated Human Radiance Field from Sparse Inputs<br>
+              <h4>HumanNeRF: Efficiently Generated Human Radiance Field from Sparse Inputs<br>
               </h4>
               <p><strong>Fuqiang Zhao</strong>, Wei Yang, Jiakai Zhang, Pei Lin, Yingliang Zhang, Jingyi Yu, Lan Xu<br>
               </p>
@@ -223,7 +242,7 @@
               </div>
             <!-- .Icon ends here -->
             <div class="col-md-9 col-12 paper-content">
-              <h4><strong>MVSNeRF</strong>: Fast Generalizable Radiance Field Reconstruction from Multi-View Stereo<br>
+              <h4>MVSNeRF: Fast Generalizable Radiance Field Reconstruction from Multi-View Stereo<br>
               </h4>
               <p>Anpei Chen, Zexiang Xu, <strong>Fuqiang Zhao</strong>, Xiaoshuai Zhang, Fanbo Xiang, Jingyi Yu, Hao Su<br>
               </p>
@@ -262,7 +281,7 @@
               </div>
             <!-- .Icon ends here -->
             <div class="col-md-9 col-12 paper-content">
-              <h4><strong>MirrorNeRF</strong>: One-shot Neural Portrait Radiance Field from Multi-mirror Catadioptric Imaging<br>
+              <h4>MirrorNeRF: One-shot Neural Portrait Radiance Field from Multi-mirror Catadioptric Imaging<br>
               </h4>
               <p>Ziyu Wang, Liao Wang, <strong>Fuqiang Zhao</strong>, Minye Wu, Lan Xu, Jingyi Yu<br>
               </p>
