--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
     <section class="wedo" id="publication">
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
-          <div class="row paper-box">
+          <!-- <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
                 src="files/Paper/letsgo.jpg" width="100%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
-      
+          
             <div class="col-md-9 col-12 paper-content">
               <h4>LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives<br>
               </h4>
@@ -121,9 +121,13 @@
               <p>
                 [<a href="https://zhaofuq.github.io/LetsGo/">ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2404.09748">ArxivPage</a>]
+                [<a href="https://www.youtube.com/watch?v=PhcF4ZfG1Sw">Video</a>]
+                [<a href="https://github.com/zhaofuq/LOD-3DGS">Code</a>]
+                [<a href="https://github.com/zhaofuq/LOD-SIBR-Viewer">Real-Time Viewer</a>]
+                [<a href="https://github.com/zhaofuq/LOD-Web-Viewer">Web Viewer</a>]
               </p>
             </div>
-          </div>
+          </div> -->
 
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
