--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -33,7 +33,7 @@
     <div class="container"></div>
     <h2>LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives</h2>
     <hr>
-    <!-- <p class="authors">
+    <p class="authors">
         <a href="https://jdtsui.github.io/"><b>Jiadi Cui* </b></a>,
         <a><b> Junming Cao* </b></a>,
         <a href="https://zhaofuq.github.io/"><b> Fuqiang Zhao* </b></a>,
@@ -44,7 +44,7 @@
         <a href="https://yujiaoshi.github.io/"> Yujiao Shi </a>,
         <a href="https://cn.linkedin.com/in/yingliangzhang"> Yingliang Zhang† </a>,
         <a href="http://www.yu-jingyi.com/"> Jingyi Yu†</a>
-    </p> -->
+    </p>
     <!-- <h5>* denotes equal contribution</h5> -->
     <div class="btn-group" role="group" aria-label="Top menu">
         <!-- <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a> -->
@@ -318,9 +318,9 @@
 
     <hr>
 
-    <!-- <footer>
+    <footer>
         <p>Send feedback and questions to <a href="https://zhaofuq.github.io/">Fuqiang Zhao</a></p>
-    </footer> -->
+    </footer>
 </div>
 
 
