--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section class="wedo" id="publication">
       <div class="container-fluid py-lg-1">
         <h3 class="w3_head mb-5">Publications <font size ="5"></font></h3>
-          <!-- <div class="row paper-box">
+          <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
                 src="files/Paper/letsgo.jpg" width="100%" playsinline=""
@@ -127,7 +127,7 @@
                 [<a href="https://github.com/zhaofuq/LOD-Web-Viewer">Web Viewer</a>]
               </p>
             </div>
-          </div> -->
+          </div>
 
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
