--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </h4>
               <p>Jiadi Cui*, Junming Cao*, <strong>Fuqiang Zhao*</strong>, Zhipeng He, Yifan Chen, Yuhui Zhong, Lan Xu, Yujiao Shi, Yingliang Zhang, Jingyi Yu<br>
               </p>
-              <p>Arxiv Preprint, 2024</p>
+              <p>(<strong>SIGGRAPH Aisa 2024</strong>) ACM Transactions on Graphics (Proce. of ACM SIGGRAPH Aisa 2024)</p>
               <p>
                 [<a href="https://zhaofuq.github.io/LetsGo/">ProjectPage</a>]
                 [<a href="https://arxiv.org/pdf/2404.09748">ArxivPage</a>]
