--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -32,6 +32,7 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
     <h2>LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives</h2>
+        <h3>SIGGRAPH Asia 2024</h3>
     <hr>
     <p class="authors">
         <a href="https://jdtsui.github.io/"><b>Jiadi Cui* </b></a>,
@@ -41,11 +42,11 @@
         <a> Yifan Chen </a>,
         <a> Yuhui Zhong </a>,
         <a href="http://xu-lan.com/"> Lan Xu </a>,
-        <a href="https://yujiaoshi.github.io/"> Yujiao Shi </a>,
+        <a href="https://yujiaoshi.github.io/"> Yujiao Shi† </a>,
         <a href="https://cn.linkedin.com/in/yingliangzhang"> Yingliang Zhang† </a>,
         <a href="http://www.yu-jingyi.com/"> Jingyi Yu†</a>
     </p>
-    <!-- <h5>* denotes equal contribution</h5> -->
+    <h5>* equal contributions, † corresponding authors</h5>
     <div class="btn-group" role="group" aria-label="Top menu">
         <!-- <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a> -->
         <a class="btn btn-primary" href="#">Paper</a>
