--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -48,7 +48,7 @@
     </p>
     <h5>* equal contributions, † corresponding authors</h5>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <!-- <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a> -->
+        <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a>
         <a class="btn btn-primary" href="#">Paper</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
