--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -49,7 +49,6 @@
     <h5>* equal contributions, † corresponding authors</h5>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a>
-        <a class="btn btn-primary" href="#">Paper</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-3DGS">Code</a>
@@ -61,7 +60,7 @@
         <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-Web-Viewer">Web Viewer</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="#">GarageWorld</a>
+        <a class="btn btn-primary" href="asserts/Gasrage World Intro & Terms of Use.pdf">GarageWorld</a>
     </div>
 </div>
 
