--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -60,7 +60,7 @@
         <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-Web-Viewer">Web Viewer</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="asserts/Gasrage World Intro & Terms of Use.pdf">GarageWorld</a>
+        <a class="btn btn-primary" href="asserts/Gasrage-World-Intro&Terms-of-Use.pdf">GarageWorld</a>
     </div>
 </div>
 
