--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="sidenav">
     <div class="side_top"> <img src="images/zhaofq.jpg" width="75%" alt="news image" class="img-fluid navimg">
       <h1> Fuqiang Zhao - 赵富强 <br>
-        [<a href="files/CV/CV_Zhao.pdf">Download CV</a> | <a href="https://www.linkedin.com/in/fuqiang-zhao-190227208/">LinkedIn</a>]<br>
+        [<a href="files/CV/CV_Zhao_EN.pdf">Download CV</a> | <a href="https://www.linkedin.com/in/fuqiang-zhao-190227208/">LinkedIn</a>]<br>
         [<a href="mailto:zhaofq@shanghaitech.edu.cn">Email</a> | <a href="https://github.com/zhaofuq">GitHub</a> 
           | <a href="https://scholar.google.com/citations?user=_LoTgnIAAAAJ&hl=zh-CN&oi=ao">Scholar</a>]<br>
       </h1>
