--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <h5><b>News!</b></h5>
           </p>
            <div id="news-box">
+      <li>[2023.06]&ensp; LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives is accepted by SIGGRAPH Asia 2024.</li>
 			<li>[2023.06]&ensp; I serve as ICCV 2023 reviewer, review 5 papers.</li>
 			<li>[2022.12]&ensp; I serve as CVPR 2023 reviewer, review 3 papers.</li>
 			<li>[2022.09]&ensp; Human Performance Modeling and Rendering via Neural Animated Mesh is accepted by SIGGRAPH Asia 2022.</li>
