--- a/LetsGo/index.html
+++ b/LetsGo/index.html
@@ -48,7 +48,7 @@
     </p>
     <h5>* equal contributions, † corresponding authors</h5>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/pdf/2404.09748">Paper</a>
+        <a class="btn btn-primary" href="https://dl.acm.org/doi/pdf/10.1145/3687762">Paper</a>
     </div>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://github.com/zhaofuq/LOD-3DGS">Code</a>
@@ -302,19 +302,32 @@
     </div>
 
 
-    <!-- <div class="section">
+    <div class="section">
         <h2>Citation</h2>
         <hr>
         <div class="bibtexsection">
-    @article{cui2024letsgo,
-        title={LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives},
-        author={Jiadi Cui, Junming Cao, Fuqiang Zhao, Zhipeng He, Yifan Chen, Yuhui Zhong, 
-            Lan Xu, Yujiao Shi, Yingliang Zhang, Jingyi Yu},
-        journal={arXiv preprint arXiv:2404.09748},
-        year={2024}
-    }
+    @article{10.1145/3687762,
+        author = {Cui, Jiadi and Cao, Junming and Zhao, Fuqiang and He, Zhipeng and Chen, Yifan and Zhong, 
+                Yuhui and Xu, Lan and Shi, Yujiao and Zhang, Yingliang and Yu, Jingyi},
+        title = {LetsGo: Large-Scale Garage Modeling and Rendering via LiDAR-Assisted Gaussian Primitives},
+        year = {2024},
+        issue_date = {December 2024},
+        publisher = {Association for Computing Machinery},
+        address = {New York, NY, USA},
+        volume = {43},
+        number = {6},
+        issn = {0730-0301},
+        url = {https://doi.org/10.1145/3687762},
+        doi = {10.1145/3687762},
+        journal = {ACM Trans. Graph.},
+        month = nov,
+        articleno = {172},
+        numpages = {18},
+        keywords = {neural rendering, large-scale garage modeling, LiDAR scanning, 3D gaussian splatting, 
+                garage dataset, level-of-detail rendering}
+        }
         </div>
-    </div> -->
+    </div>
 
     <hr>
 
