--- a/index.html
+++ b/index.html
@@ -109,6 +109,26 @@
           <div class="row paper-box">
             <div class="col-md-3 col-12 paper_img"> 
               <img 
+                src="files/Paper/aerialgo.png" width="100%" playsinline=""
+                autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
+              </div>
+          
+            <div class="col-md-9 col-12 paper-content">
+              <h4>AerialGo: Walking-through City View Generation from Aerial Perspectives<br>
+              </h4>
+              <p><strong>Fuqiang Zhao*</strong>, Yijing Guo*, Siyuan Yang*, Xi Chen, Luo Wang, Lan Xu, Yingliang Zhang, Yujiao Shi, Jingyi Yu<br></p>
+              <p>Arxiv Preprint, 2024</p>
+              <p>
+                [<a>ProjectPage</a>]
+                [<a href="https://arxiv.org/abs/2412.00157">ArxivPage</a>]
+              </p>
+            </div>
+          </div>
+
+
+          <div class="row paper-box">
+            <div class="col-md-3 col-12 paper_img"> 
+              <img 
                 src="files/Paper/letsgo.jpg" width="100%" playsinline=""
                 autoplay="autoplay" loop="loop" preload="" muted="" alt="Popup Image" class="img-fluid" />
               </div>
