--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
             href="https://www.upc.edu.cn/">China University of Petroleum</a>.
          
-            I am passionate and interested in <strong>reconstruction, rendering and generation</strong> tasks based on <strong>Neural Radiance Field</strong>. 
+            I am passionate and interested in 3D Vision, including <strong>reconstruction, rendering and generation</strong> tasks based on <strong>Diffusion</strong> models and <strong>NeRF&3DGS</strong> representations. 
           </p>
           <li>Neural Rendering</li>
-          <li>Text-To-3D & Image-To-3D Generation</li>
           <li>3D & 4D Reconstruction</li>
+          <li>Lifting 2D priors to 3D Generation</li>
+  
           <br>
           <h5><b>News!</b></h5>
           </p>
