--- a/index.html
+++ b/index.html
@@ -71,19 +71,20 @@
           <h5>Ph.D Candidate @ <a href="http://www.shanghaitech.edu.cn/"><b>ShanghaiTech University - 上海科技大学 </b></a> - <a
             href="http://sist.shanghaitech.edu.cn/">SIST</a> - <a
             href="http://vic.shanghaitech.edu.cn/">VDI</a></h5>
-          <p><a href="mailto:zhaofq@shanghaitech.edu.cn">zhaofq@shanghaitech.edu.cn</a></p>
+          <!-- <p><a href="mailto:zhaofq@shanghaitech.edu.cn">zhaofq@shanghaitech.edu.cn</a></p> -->
           <br>
           <h5><b>About Me</b></h5>
           Hi, now I am a PhD student in <strong>computer science and technology</strong> at VRVC Lab, <a
             href="http://www.shanghaitech.edu.cn/">ShanghaiTech University</a> ,advised by <a
             href="http://www.yu-jingyi.com/">Prof. Jingyi Yu</a>. I obtained my B.E. in <strong>software engineering </strong> at <a
             href="https://www.upc.edu.cn/">China University of Petroleum</a>.
+
+            My research spans several key areas, including <strong>3D Reconstruction & Rendering</strong> based on NeRF/3DGS, <strong>Camera-Conditioned Video Generation</strong>, and <strong>3D Generative AI</strong>.
          
-            I am passionate and interested in 3D Vision, including <strong>reconstruction, rendering and generation</strong> tasks based on <strong>Diffusion</strong> models and <strong>NeRF&3DGS</strong> representations. 
           </p>
           <li>Neural Rendering</li>
           <li>3D & 4D Reconstruction</li>
-          <li>Lifting 2D priors to 3D Generation</li>
+          <li>3D Generative AI</li>
   
           <br>
           <h5><b>News!</b></h5>
