--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Fuqiang Zhao - Computer Vision Researcher & Entrepreneur</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -705,7 +705,137 @@
             opacity: 1;
             visibility: visible;
         }
-  </style>
+
+        /* 移动设备响应式样式 */
+        @media (max-width: 768px) {
+            /* 导航栏样式 */
+            .navbar {
+                padding: 0.5rem 1rem;
+            }
+            
+            .navbar-brand {
+                font-size: 1.3rem;
+            }
+
+            /* 个人信息部分 */
+            .profile-image {
+                width: 180px;
+                height: 180px;
+                margin: 1rem auto;
+            }
+
+            .name-title {
+                font-size: 1.5rem;
+                margin-top: 1rem;
+            }
+
+            .name-cn {
+                font-size: 1rem;
+            }
+
+            .position-title {
+                font-size: 1.1rem;
+                line-height: 1.4;
+                margin: 0.5rem 0;
+            }
+
+            .affiliation {
+                font-size: 1rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .intro-text {
+                font-size: 1rem;
+                line-height: 1.6;
+                text-align: left;
+                padding: 0 1rem;
+            }
+
+            /* 论文展示部分 */
+            .paper-box {
+                padding: 1rem;
+                margin-bottom: 1rem;
+            }
+
+            .paper_img {
+                margin-bottom: 1rem;
+            }
+
+            .paper-content h4 {
+                font-size: 1.2rem;
+                margin-bottom: 0.5rem;
+            }
+
+            .authors {
+                font-size: 0.9rem;
+            }
+
+            .venue {
+                font-size: 0.9rem;
+            }
+
+            .paper-links {
+                flex-wrap: wrap;
+                gap: 0.5rem;
+            }
+
+            .paper-links .btn {
+                font-size: 0.8rem;
+                padding: 0.3rem 0.8rem;
+            }
+
+            /* 经验和教育部分 */
+            .experience-list li {
+                font-size: 0.95rem;
+                margin-bottom: 0.5rem;
+            }
+
+            /* 联系方式部分 */
+            .contact-info li {
+                font-size: 0.95rem;
+            }
+
+            /* 区块标题 */
+            .section-title {
+                font-size: 1.5rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .section {
+                padding: 2rem 0;
+            }
+
+            /* 返回顶部按钮 */
+            .back-to-top {
+                width: 40px;
+                height: 40px;
+                bottom: 20px;
+                right: 20px;
+                font-size: 16px;
+            }
+        }
+
+        /* 小屏幕设备优化 */
+        @media (max-width: 576px) {
+            .container {
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            .paper-links .btn {
+                padding: 0.25rem 0.6rem;
+                margin: 0.2rem;
+            }
+
+            .social-links {
+                gap: 1rem;
+            }
+
+            .social-icon {
+                font-size: 1.4rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- 添加返回顶部按钮 -->
@@ -767,7 +897,7 @@
                             I am a Ph.D. candidate at <a href="http://www.shanghaitech.edu.cn/eng/" class="highlight-link">ShanghaiTech University</a>, advised by <a href="http://www.yu-jingyi.com/" class="highlight-link">Prof. Jingyi Yu</a>. I am also the CEO and Founder of <a href="http://neudim.com/" class="highlight-link">NeuDim Digital Technology Inc.</a>, a startup focused on neural 3D/4D reconstruction technologies.
                         </p>
                         <p class="intro-text">
-                            My research interests spans several key areas, including 3D Reconstruction & Rendering based on NeRF/3DGS, and 3D Generative AI. I have a great passion for Neural Rendering, 3D Reconstruction and Generation, aiming to bridge the gap between academic research and industrial applications.
+                            My research interests span several key areas, including 3D Reconstruction & Rendering based on NeRF/3DGS, and 3D Generative AI. I have a great passion for Neural Rendering, 3D Reconstruction and Generation, aiming to bridge the gap between academic research and industrial applications.
                         </p>
 
                         <div class="row mt-5">
