--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
                     <p class="name-cn">赵富强</p>
                     <p class="affiliation">NeuDim Founder </br> ShanghaiTech University  </p>
                     <div class="social-links mt-4">
-                        <a href="mailto:zhaofq@shanghaitech.edu.cn" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Email: zhaofq@shanghaitech.edu.cn">
+                        <a href="mailto:zhaofq97@gmail.com" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Email: zhaofq97@gmail.com">
                             <i class="fas fa-envelope"></i>
                         </a>
                         <a href="https://scholar.google.com/citations?user=_LoTgnIAAAAJ" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Google Scholar">
@@ -971,8 +971,8 @@
                             <div class="col-md-6">
                                 <h3 class="section-subtitle">Research Interests</h3>
                                 <ul class="interest-list">
-                                    <li><i class="fas fa-cube"></i> Neural Rendering</li>
-                                    <li><i class="fas fa-cube"></i> 3D Reconstruction</li>
+                                    <li><i class="fas fa-cube"></i> Neural Rendering & Reconstruction</li>
+                                    <li><i class="fas fa-cube"></i> Camera Conditioned Video Diffusion</li>
                                     <li><i class="fas fa-cube"></i> 3D Generative AI</li>
                                 </ul>
                             </div>
@@ -1174,6 +1174,55 @@
           </div>
     </section>
 
+    <section id="project" class="section">
+        <div class="container">
+            <h2 class="section-title">Project Experience</h2>
+            
+            <div class="year-section">
+                <div class="paper-box">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>Generative Full-Color 3D Printing Platform</h4>
+                            <p class="venue">May 2022 - Present</p>
+                            <ul class="experience-list">
+                                <li>Served as Project Manager, leading the development of a platform integrating 3D/video foundation models and 3D reconstruction techniques (NeRF \& 3DGS). </li>
+                                <li>Designed a user-friendly workflow that enables users to generate personalized full-color 3D-printed artworks from a single photo. </li>
+                            </ul>
+                            <div class="paper-links">
+                                <a href="https://cysta.ai/" class="btn btn-sm btn-outline-primary">Product Page</a>
+                </div>
+              </div>
+            </div>
+                </div>
+                <div class="paper-box">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>3D Generative Content Creation Platform</h4>
+                            <p class="venue">January 2023 - April 2022</p>
+                            <p>Built a low-barrier 3D content creation platform leveraging 3D Gaussian Splatting (3DGS) and Neural Radiance Fields (NeRF), enabling efficient 3D generation from multi-view images or videos.</p>
+                            <div class="paper-links">
+                                <a href="https://recon.neudim.com/" class="btn btn-sm btn-outline-primary">Product Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="paper-box">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h4>Multi-view Camera Capture System</h4>
+                            <p class="venue">September 2020 - December 2024</p>
+                            <ul class="experience-list">
+                                <li>Designed and implemented a multi-camera capture system for dynamic multi-view video acquisition.  </li>
+                                <li>Conducted research on multi-view 3D reconstruction algorithms, with multiple works published at top conferences including SIGGRAPH and CVPR.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Experience Section -->
     <section id="experience" class="section">
         <div class="container">
@@ -1268,7 +1317,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Get in Touch</h5>
                             <ul class="contact-info">
-                                <li><i class="fas fa-envelope"></i> <a href="mailto:zhaofq@shanghaitech.edu.cn">zhaofq@shanghaitech.edu.cn</a></li>
+                                <li><i class="fas fa-envelope"></i> <a href="mailto:zhaofq97@gmail.com">zhaofq97@gmail.com</a></li>
                                 <li><i class="fas fa-map-marker-alt"></i> ShanghaiTech University, Shanghai, China</li>
       </ul>
                         </div>
