--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                     <img src="images/zhaofq-middle.jpg" alt="Fuqiang Zhao" class="profile-image img-fluid rounded-circle mb-4">
                     <h2 class="name-title">Fuqiang Zhao</h2>
                     <p class="name-cn">赵富强</p>
-                    <p class="affiliation">NeuDim Founder </br> ShanghaiTech University  </p>
+                    <p class="affiliation">Crysta.ai Co-founder </br> ShanghaiTech University  </p>
                     <div class="social-links mt-4">
                         <a href="mailto:zhaofq97@gmail.com" class="social-icon" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Email: zhaofq97@gmail.com">
                             <i class="fas fa-envelope"></i>
